# routes/profile.js
@@ -2,12 +2,9 @@ const express = require('express');
 const routes = express.Router();
 const profileController =require("../controllers/profile");
 const profileSchema= require("../models/profile");
-const findOrCreate = require('mongoose-findorcreate');
 
 
-profileSchema.plugin(findOrCreate);
-
-routes.get("/dashboard", profileController.createProfile);
-routes.route("/dashboard/:id").get(profileController.getProfile).post(profileController.createProfile).put(profileController.updateProfile).delete(profileController.deleteProfile);
+routes.get("/", profileController.createProfile);
+routes.route("/:id").get(profileController.getProfile).put(profileController.updateProfile).delete(profileController.deleteProfile);
 // 
 module.exports = routes;
